--- a/app/src/main/res/menu/episode_menu.xml
+++ b/app/src/main/res/menu/episode_menu.xml
@@ -7,4 +7,12 @@
         app:showAsAction="always"
         android:icon="@drawable/download"
         />
+    <item
+        android:id="@+id/action_settings"
+        android:orderInCategory="100"
+        android:title="설정" />
+    <item
+        android:id="@+id/action_debug"
+        android:orderInCategory="101"
+        android:title="debug info" />
 </menu>
