초기 화면에서 기본 주소에 숫자 입력 가능하도록 변경

--- a/app/src/main/res/layout/activity_first_time.xml
+++ b/app/src/main/res/layout/activity_first_time.xml
@@ -82,10 +82,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:singleLine="true"
-                android:textColor="#FFF"
+                android:hint="기본 주소 입력"
                 android:maxLines="1"
-                android:hint="기본 주소 입력 (숫자없는 주소)"/>
+                android:singleLine="true"
+                android:textColor="#FFF" />
 
             <Button
                 android:background="@drawable/button_bg_white"
