--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -12,8 +12,8 @@
         <item>저장된 만화</item>
     </string-array>
     <string-array name="viewer">
-        <item>스크롤 뷰어 (기본)</item>
-        <item>터치 뷰어</item>
+        <item>터치 뷰어 (기본)</item>
+        <item>스크롤 뷰어</item>
         <item>컷툰 뷰어</item>
     </string-array>
     <string-array name="searchMethods">
